--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,14 @@
 {
     "require": {
         "league/commonmark": "2.4.2"
+    },
+    "require-dev": {
+        "mediawiki/mediawiki-codesniffer": "38.0.0"
+    },
+    "scripts": {
+        "test": [
+            "@phpcs"
+        ],
+        "phpcs": "phpcs -sp --cache"
     }
 }
