Set up Phan and make pass
Install v0.12.1 of MediaWiki's phan config. Additionally

- Add a .gitignore file to exclude the `/vendor/` directory and the
`/composer.lock` file

- Add `use` statements to ParserHooks for types mentioned in documentation

- Add `@phan-var` annotations in MarkdownContentHandler where Phan complains
because it doesn't know about the more specific types of the variables

--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,14 @@
 		"league/commonmark": "2.4.2"
 	},
 	"require-dev": {
-		"mediawiki/mediawiki-codesniffer": "38.0.0"
+		"mediawiki/mediawiki-codesniffer": "38.0.0",
+		"mediawiki/mediawiki-phan-config": "0.12.1"
 	},
 	"scripts": {
 		"test": [
 			"@phpcs"
 		],
+		"phan": "phan -d . --long-progress-bar",
 		"phpcs": "phpcs -sp --cache"
 	}
 }
