CI: Add eslint, stylelint, and banana and make pass
Set up linting for the JS, CSS, and JSON files, and update the styles and
JavaScript so that the linting is successful.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,3 +81,18 @@ jobs:
           composer update
       - name: Phan
         run: ./vendor/bin/phan -d extensions/${{ env.EXTNAME }} --minimum-target-php-version=7.4 --long-progress-bar
+
+  style-js:
+    name: Code Style (JS+styles)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+      - name: Setup Extension
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm test
